Refactor: String으로 받지 않고, LocalDateTime으로 받도록 변경